Fixed layout issue with repositories URL on print stylesheet

--- a/css/print.css
+++ b/css/print.css
@@ -34,6 +34,10 @@
     padding-bottom: 0;
 }
 
+#jobs h4 {
+    margin-top: 10pt;
+}
+
 #jobs .job,
 #about {
     page-break-inside: avoid;
